Fix z-index of the navigation hint

--- a/src/components/menu/side-menu/SideMenu.module.scss
+++ b/src/components/menu/side-menu/SideMenu.module.scss
@@ -1,5 +1,6 @@
 .menu {
   height: 100vh;
   position: sticky;
+  z-index: 9999;
   top: 0;
 }
